Prevent exception on using initial folder. Add Duration and Frames Per Second in editor to edit the length of the video. Regenerate the frames if the duration or frame per second is changed.

--- a/src/BarChartRaceNet/Views/BarChartView.xaml
+++ b/src/BarChartRaceNet/Views/BarChartView.xaml
@@ -149,7 +149,7 @@
                                                         MaxWidth="150"
                                                         Margin="16,0,0,0"
                                                         Opacity="{Binding BarOpacity}"
-                                                        Source="{Binding Icon, Converter={StaticResource StringToVisibilityConverter}}"
+                                                        Source="{Binding Icon, Converter={StaticResource StringToVisibilityConverter}, IsAsync=True}"
                                                         Stretch="Uniform" />
                                                     <TextBlock
                                                         Margin="8,0,0,0"
