--- a/src/BarChartRaceNet/Views/ChartEditorView.xaml
+++ b/src/BarChartRaceNet/Views/ChartEditorView.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:converters="clr-namespace:BarChartRaceNet.Converters"
+    xmlns:core="clr-namespace:BarChartRaceNet.Core"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:extensions="clr-namespace:BarChartRaceNet.Extensions"
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
@@ -86,6 +87,9 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
                                 <RowDefinition />
                             </Grid.RowDefinitions>
                             <!--  Width  -->
@@ -99,6 +103,7 @@
                                 Grid.Column="2"
                                 Margin="{StaticResource ControlMargin}"
                                 mah:TextBoxHelper.Watermark="Type Chart width"
+                                Interval="50"
                                 Maximum="7680"
                                 Minimum="800"
                                 Value="{Binding Width, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
@@ -113,6 +118,7 @@
                                 Grid.Column="2"
                                 Margin="{StaticResource ControlMargin}"
                                 mah:TextBoxHelper.Watermark="Type Chart height"
+                                Interval="50"
                                 Maximum="4320"
                                 Minimum="600"
                                 Value="{Binding Height, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
@@ -140,7 +146,7 @@
                                 Grid.Row="3"
                                 Grid.Column="2"
                                 Margin="{StaticResource ControlMargin}"
-                                mah:TextBoxHelper.Watermark="Type bar space"
+                                mah:TextBoxHelper.Watermark="Type bar thickness"
                                 Maximum="500"
                                 Minimum="10"
                                 Value="{Binding BarThickness, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
@@ -154,7 +160,7 @@
                                 Grid.Row="4"
                                 Grid.Column="2"
                                 Margin="{StaticResource ControlMargin}"
-                                mah:TextBoxHelper.Watermark="Type Chart height"
+                                mah:TextBoxHelper.Watermark="Type title font size"
                                 Maximum="100"
                                 Minimum="6"
                                 Value="{Binding TitleFontSize, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
@@ -168,7 +174,7 @@
                                 Grid.Row="5"
                                 Grid.Column="2"
                                 Margin="{StaticResource ControlMargin}"
-                                mah:TextBoxHelper.Watermark="Type Chart height"
+                                mah:TextBoxHelper.Watermark="Type subtitle font size"
                                 Maximum="100"
                                 Minimum="6"
                                 Value="{Binding SubtitleFontSize, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
@@ -182,13 +188,56 @@
                                 Grid.Row="6"
                                 Grid.Column="2"
                                 Margin="{StaticResource ControlMargin}"
-                                mah:TextBoxHelper.Watermark="Type Chart height"
+                                mah:TextBoxHelper.Watermark="Type bar name font size"
                                 Maximum="100"
                                 Minimum="6"
                                 Value="{Binding BarNameFontSize, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
+                            <!--  Background Image  -->
+                            <TextBlock
+                                Grid.Row="7"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Background Image Url" />
+                            <TextBox
+                                Grid.Row="7"
+                                Grid.Column="2"
+                                Height="26"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="{Binding BackgroundImage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
+                            <!--  Background Image Width  -->
+                            <TextBlock
+                                Grid.Row="8"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Background image width" />
+                            <mah:NumericUpDown
+                                Grid.Row="8"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                mah:TextBoxHelper.Watermark="Type background image width"
+                                Interval="50"
+                                Maximum="7680"
+                                Minimum="200"
+                                Value="{Binding BackgroundImageWidth, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
+                            <!--  Background Image Opacity  -->
+                            <TextBlock
+                                Grid.Row="9"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Background image opacity" />
+                            <mah:NumericUpDown
+                                Grid.Row="9"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                mah:TextBoxHelper.Watermark="Type background image opacity"
+                                Interval="0.1"
+                                Maximum="1"
+                                Minimum="0"
+                                Value="{Binding BackgroundImageOpacity, Mode=TwoWay, StringFormat={}{0:0.##,0.##}, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
                             <!--  Bar Colors  -->
                             <Button
-                                Grid.Row="7"
+                                Grid.Row="10"
+                                Grid.Column="2"
                                 Margin="{StaticResource ControlMargin}"
                                 Command="{Binding ElementName=ChartEditorViewRoot, Path=DataContext.RegenerateBarColorCommand}"
                                 Content="Regenerate Bar Colors" />
@@ -222,7 +271,7 @@
                                 Margin="{StaticResource ControlMargin}"
                                 mah:TextBoxHelper.Watermark="Type Chart height"
                                 Maximum="100"
-                                Minimum="6"
+                                Minimum="0.5"
                                 Value="{Binding DurationPerSampleInSeconds, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
                             <!--  Frame Per Seconds  -->
                             <TextBlock
@@ -267,6 +316,7 @@
                             <TextBox
                                 Grid.Row="0"
                                 Grid.Column="2"
+                                Height="26"
                                 Margin="{StaticResource ControlMargin}"
                                 Text="{Binding Title, UpdateSourceTrigger=PropertyChanged, Delay=100}" />
                             <!--  Subtitle  -->
@@ -278,8 +328,37 @@
                             <TextBox
                                 Grid.Row="1"
                                 Grid.Column="2"
+                                Height="26"
                                 Margin="{StaticResource ControlMargin}"
                                 Text="{Binding Subtitle, UpdateSourceTrigger=PropertyChanged, Delay=100}" />
+                            <!--  Decimal Places  -->
+                            <TextBlock
+                                Grid.Row="2"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Statistics Method" />
+                            <ComboBox
+                                Grid.Row="2"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                DisplayMemberPath="Description"
+                                ItemsSource="{Binding Source={extensions:Enumeration {x:Type core:StatisticsMethod}}}"
+                                SelectedValue="{Binding StatisticsMethod, Delay=100}"
+                                SelectedValuePath="Value" />
+                            <!--  Decimal Places  -->
+                            <TextBlock
+                                Grid.Row="3"
+                                Grid.Column="0"
+                                Margin="{StaticResource ControlMargin}"
+                                Text="Decimal Places" />
+                            <mah:NumericUpDown
+                                Grid.Row="3"
+                                Grid.Column="2"
+                                Margin="{StaticResource ControlMargin}"
+                                mah:TextBoxHelper.Watermark="Type Chart height"
+                                Maximum="6"
+                                Minimum="0"
+                                Value="{Binding DecimalPlaces, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
                         </Grid>
                     </GroupBox>
                     <!--  Bar Chart Settings  -->
@@ -307,6 +386,7 @@
                             <TextBox
                                 Grid.Row="0"
                                 Grid.Column="2"
+                                Height="26"
                                 Margin="{StaticResource ControlMargin}"
                                 Text="{Binding Name, UpdateSourceTrigger=PropertyChanged, Delay=500}" />
                             <!--  Icon  -->
@@ -318,6 +398,7 @@
                             <TextBox
                                 Grid.Row="1"
                                 Grid.Column="2"
+                                Height="26"
                                 Margin="{StaticResource ControlMargin}"
                                 Text="{Binding Icon, UpdateSourceTrigger=PropertyChanged, Delay=1000}" />
                         </Grid>
