Update references:     CsvHelper Version="26.1.0"     FFMpegCore Version="4.1.0"     log4net Version="2.0.12"     MahApps.Metro Version="2.4.4"     Newtonsoft.Json Version="13.0.1"     Ookii.Dialogs.Wpf.NETCore Version="2.2.1" Adjust code with the newer reference version. Update documentation.

--- a/src/BarChartRaceNet/Views/MainWindow.xaml
+++ b/src/BarChartRaceNet/Views/MainWindow.xaml
@@ -12,6 +12,7 @@
     Width="800"
     Height="450"
     d:DataContext="{d:DesignInstance viewmodels:MainWindowViewModel}"
+    mah:DialogParticipation.Register="{Binding GlobalData}"
     Closing="{extensions:EventBinding ClosingCommand,
                                       CommandParameter={Binding RelativeSource={RelativeSource Self}}}"
     GlowBrush="{DynamicResource AccentColorBrush}"
